--- a/app/css/additional-styles/utility-patterns.css
+++ b/app/css/additional-styles/utility-patterns.css
@@ -80,7 +80,10 @@ input[type="search"]::-webkit-search-results-decoration {
 
 .checkbox {
   position: absolute;
-  display: none;
+  opacity: 0;
+  width: 0;
+  height: 0;
+  /* display: none; */
 }
 
 .slider {
